--- a/login.html
+++ b/login.html
@@ -2,16 +2,18 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>My Page</title>
+	<title>Login Page</title>
 </head>
 <body style="background-color: lightgoldenrodyellow;">
-	<form action="Next.html" method="get">
-		<pre>
-			<u style="font-size: 30px; color: red;"><b>LOGIN HERE</b></u>
-			Username : <input type="text" name="user"> <br> <br>
-			Password : <input type="password" name="pass"> <br> <br>
-			<input type="submit" value="Login">
-		</pre>
-	</form>
+	<center>
+		<form action="Next.html" method="get">
+			<pre>
+				
+				Username : <input type="text" name="user"> <br> <br>
+				Password : <input type="password" name="pass"> <br> <br>
+				
+			</pre>
+		</form>
+	</center>
 </body>
 </html>
