update login and style

--- a/login.html
+++ b/login.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Login Page</title>
+	<link rel="stylesheet" href="login_style.css">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"/>
 	<style>
@@ -54,8 +55,8 @@
 			<div class="row gx-lg-5 align-items-center mb-5">
 			<div class="col-lg-6 mb-5 mb-lg-0" style="z-index: 10">
 				<h1 class="my-5 display-5 fw-bold ls-tight" style="color: hsl(218, 81%, 95%)">
-				The best offer <br />
-				<span style="color: hsl(218, 81%, 75%)">for your business</span>
+				Create your Account <br />
+				<span style="color: hsl(218, 81%, 75%)">by using your Email and Password.</span>
 				</h1>
 				<p class="mb-4 opacity-70" style="color: hsl(218, 81%, 85%)">
 				Lorem ipsum dolor, sit amet consectetur adipisicing elit.
@@ -76,36 +77,24 @@
 					<div class="row">
 						<div class="col-md-6 mb-4">
 						<div class="form-outline">
-							<input type="text" id="form3Example1" class="form-control" />
-							<label class="form-label" for="form3Example1">First name</label>
+							<input type="text" id="form3Example1" class="form-control" placeholder="Enter Firstname"/>
 						</div>
 						</div>
 						<div class="col-md-6 mb-4">
 						<div class="form-outline">
-							<input type="text" id="form3Example2" class="form-control" />
-							<label class="form-label" for="form3Example2">Last name</label>
+							<input type="text" id="form3Example2" class="form-control" placeholder="Enter Lastname"/>
 						</div>
 						</div>
 					</div>
 		
 					<!-- Email input -->
 					<div class="form-outline mb-4">
-						<input type="email" id="form3Example3" class="form-control" />
-						<label class="form-label" for="form3Example3">Email address</label>
+						<input type="email" id="form3Example3" class="form-control" placeholder="Enter Email Address"/>
 					</div>
 		
 					<!-- Password input -->
 					<div class="form-outline mb-4">
-						<input type="password" id="form3Example4" class="form-control" />
-						<label class="form-label" for="form3Example4">Password</label>
-					</div>
-		
-					<!-- Checkbox -->
-					<div class="form-check d-flex justify-content-center mb-4">
-						<input class="form-check-input me-2" type="checkbox" value="" id="form2Example33" checked />
-						<label class="form-check-label" for="form2Example33">
-						Subscribe to our newsletter
-						</label>
+						<input type="password" id="form3Example4" class="form-control" placeholder="Enter Password"/>
 					</div>
 		
 					<!-- Submit button -->
@@ -117,19 +106,15 @@
 					<div class="text-center">
 						<p>or sign up with:</p>
 						<button type="button" class="btn btn-link btn-floating mx-1">
-						<i class="fab fa-facebook-f"></i>
+						<i class="fa fa-facebook-f"></i>
 						</button>
 		
 						<button type="button" class="btn btn-link btn-floating mx-1">
-						<i class="fab fa-google"></i>
+						<i class="fa fa-google"></i>
 						</button>
 		
 						<button type="button" class="btn btn-link btn-floating mx-1">
-						<i class="fab fa-twitter"></i>
-						</button>
-		
-						<button type="button" class="btn btn-link btn-floating mx-1">
-						<i class="fab fa-github"></i>
+						<i class="fa fa-twitter"></i>
 						</button>
 					</div>
 					</form>
@@ -137,6 +122,35 @@
 				</div>
 			</div>
 			</div>
+		</div>
+	</section>
+	<section class="footer">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-3">
+					<img src="images/triptok.png" class="footer-logo" alt="">
+					<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly.</p>
+				</div>
+				<div class="col-md-3">
+					<h4>Features</h4>
+					<p>Deals & Offers</p>
+					<p>Custmer Review</p>
+					<p>Cancelation Policy</p>
+				</div>
+				<div class="col-md-3">
+					<h4>Quick contact</h4>
+					<p><i class="fa fa-phone-square"></i> +1 1236547899</p>
+					<p><i class="fa fa-envelope"></i> hello@welcome@gmail.com</p>
+					<p><i class="fa fa-home"></i> xyz Road , ABD City</p>
+				</div>
+				<div class="col-md-3">
+					<h4>Follow us on</h4>
+					<p><i class="fa fa-facebook-official"></i> Facebook</p>
+					<p><i class="fa fa-youtube-play"></i> Youtube</p>
+					<p><i class="fa fa-twitter"></i> Twitter</p>
+				</div>
+			</div><hr>
+			<p class="copyright">Made By<i class="fa fa-heart"></i>Abhishek Padhi</p>
 		</div>
 	</section>
 </body>
